2010-07-28  Angelo Corsaro  <angelo.corsaro@gmail.com>

	* src/dds/runtime.*pp:
	* src/dds/subscriber.*pp:
	* src/dds/publisher.*pp: 

	Added support for specifiying multiple partition when creating the
	runtime.

	

2010-06-18  Angelo Corsaro  <angelo.corsaro@gmail.com>

	* v0.8 Released see RELEASE_NOTES to detailed changes/additions.
	
	* src/dds/waitset.cpp: Fixed issue #10

	* src/dds/peer/runtime_impl.cpp: Fixed issue #11

	* src/dds/types.hpp: New file mapping types from DDS => dds 
	* src/dds/*: Homogenized public types to belong to the "dds" namespace.

2010-03-31  Angelo Corsaro  <angelo.corsaro@gmail.com>


	* cppcheck: Run cppcheck over SimD and detected a few small
	issues, such as some missing "&" here and there. The detected
	issues have all been fixed as noted below.

	* src/dds/peer/topic_impl.hpp: 	
	* src/dds/topic.hpp: 

	Added missing "&" from ctor and init method.

	* src/dds/signals.hpp: New file defining DDS-related events.  

	* src/dds/peer/reader_impl.hpp: 
	* src/dds/reader.hpp:  

	- Refactored the signal-handling to use a templetized connect
	method to connects signals to slots. The implementation now should
	not be simpler to read and the slight API change should also
	improve the user experience. The downside is that existing
	applications will have to change the slot-registration call. 

	NOTE: for those folks that are already using GCC 4.5, you can use
	lambdas to connect slots to SimD defined signals.

	- Added iterator-based read/take

	* src/dds/peer/instance_writer_impl.hpp: Refeactored the instance
	data writer so to move the implementation under the peer folder.

	
	* demo/ping/ping-sub.cpp: 
	* demo/ping/ping-asub.cpp: 
	  
	  Updated the demo to reflect the changes in the signal/slog API
	  and to take advantage of the new Iterator-based read/take.

	* cmake/osmacros.cmake: Added -std=c++0x option to allow some
	C++0x extensions that are supported by both GCC and MS compilers.

	* demo/ishapes/Circle.cpp: 