@@ -1,3 +1,4 @@
+
 struct PingType
 {
   long         number;
